# NumRS

./: CHANGELOG.md  Cargo.toml  EXAMPLES.md  LICENSE  README.md  USAGE.md
.github/workflows/: ci.yml
src/: error.rs  lib.rs  main.rs  math.rs  matrix.rs  parallel.rs  tensor.rs  test_utils.rs
src/ops/: add.rs  index.rs  mod.rs  mul.rs  scalar.rs  sub.rs
src/tests/: integration.rs
