[package]
name    = "numrs"
version = "0.8.0"
edition = "2021"

[lib]
name = "numrs"
path = "src/lib.rs"

[[bin]]
name = "numrs"
path = "src/main.rs"

[[test]]
name = "integration"
path = "src/tests/integration.rs"

[dependencies]
num-traits = "0.2"
colored = "2"
rayon   = "=1.10.0"
rand = "0.8"
rand_distr = "0.4"
